# csmth

./: .gitignore  CMakeLists.txt  README.md
libcurl/: CMakeLists.txt  note.txt
mbedtls/: CMakeLists.txt  note.txt
src/: main.cpp  net_util.cpp  net_util.h  smth.cpp  smth.h
